feat(spa): icons, manifest, PWA glory

--- a/teamplanner-spa/index.html
+++ b/teamplanner-spa/index.html
@@ -2,10 +2,19 @@
 <html>
 
 <head>
+  <base href="/">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <meta name="Description" content="An application to help you manage your team's machtes and lineup">
-  <base href="/">
+  <meta name="theme-color" content="#ededed">
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <link rel="manifest" href="/manifest.webmanifest" crossorigin="use-credentials">
+  <link rel="icon" href="/icon192x192.png" type="image/png">
+  <link rel="apple-touch-icon" href="/icon192x192.png" type="image/png">
+  <meta name="apple-mobile-web-app-title" content="Teamplanner">
+  <title>Teamplanner</title>
+
 
   <style>
     html,
@@ -14,7 +23,6 @@
       background-color: #ededed;
     }
   </style>
-  <title>Teamplanner</title>
 </head>
 
 <body>
