fix(spa): PWA / Lighthouse related stuff

--- a/teamplanner-spa/index.html
+++ b/teamplanner-spa/index.html
@@ -4,14 +4,17 @@
 <head>
   <base href="/">
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <meta name="Description" content="An application to help you manage your team's machtes and lineup">
-  <meta name="theme-color" content="#ededed">
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <meta name="author" content="Jan Syring-Lingenfelder (www.jan-sl.de)">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <link rel="manifest" href="/manifest.webmanifest" crossorigin="use-credentials">
+  <meta name="theme-color" content="#ededed">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <link rel="icon" href="/icon192x192.png" type="image/png">
   <link rel="apple-touch-icon" href="/icon192x192.png" type="image/png">
+  <meta name="application-name" content="Teamplanner">
   <meta name="apple-mobile-web-app-title" content="Teamplanner">
   <title>Teamplanner</title>
 
@@ -29,6 +32,7 @@
   <tp-spa></tp-spa>
 
   <script type="module" src="./src/teamplanner-spa.js"></script>
+  <noscript>JavaScript is required to use this app</noscript>
 </body>
 
 </html>
