fix(spa): give it a german looking name
Although teamplanner is the correct spelling in english, this looks wrong
to german eyes, where Teamplaner would be correct.
So, until the title is configurable, let's give it a german looking name

--- a/teamplanner-spa/index.html
+++ b/teamplanner-spa/index.html
@@ -14,9 +14,9 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <link rel="icon" href="/icon192x192.png" type="image/png">
   <link rel="apple-touch-icon" href="/icon192x192.png" type="image/png">
-  <meta name="application-name" content="Teamplanner">
-  <meta name="apple-mobile-web-app-title" content="Teamplanner">
-  <title>Teamplanner</title>
+  <meta name="application-name" content="Teamplaner">
+  <meta name="apple-mobile-web-app-title" content="Teamplaner">
+  <title>Teamplaner</title>
 
 
   <style>
