--- a/teamplanner-spa/index.html
+++ b/teamplanner-spa/index.html
@@ -22,6 +22,8 @@
   <style>
     html,
     body {
+      margin: 0;
+      padding: 0;
       font-family: sans-serif;
       background-color: #ededed;
     }
